Fix and change errors in index

--- a/css/main.css
+++ b/css/main.css
@@ -17,13 +17,22 @@ h1, h2 {
 body {
   margin: 0;
   padding: 0;
+  align-self: auto;
 
-  gap: .75rem;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   display: grid;
   grid-template-areas:
   "banner"
   "main";
+}
+
+.main-grid {
+  list-style-type: none;
+  padding: 0;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(min(15rem, 100%), 1fr));
+  gap: .75rem;
 }
 
 header {
